syntax = "proto3";

option go_package = "grpc-add-brand/proto";

// Create Brand
message RequestBrandData {
    string brand_name = 1;
    string country = 2;
    string description = 3;
}

message ResponseBrandData {
    int32  id = 1;
    string brand_name = 2;
    string country = 3;
    string description = 4;
    string message = 5;  
}

// Request and Response single data by ID
message RequestGetBrand {
    int32 id = 1;
}

message ResponseBrand {
    int32  id = 1;
    string brand_name = 2;
    string country = 3;
    string description = 4;
    string message = 5;
}

// Request and Response whole data 
message RequestGetBrans {}

message ResponseBrandList {
    repeated ResponseBrand brands = 1;
    string message = 2;
}
service BrandService {
    rpc CreateBrand (RequestBrandData) returns (ResponseBrandData);
    rpc GetBrand (RequestGetBrand) returns (ResponseBrand);
    rpc GetBrands (RequestGetBrans) returns (ResponseBrandList);
}